deploy: 3f5ed667af289e4250eb25ae1aa717736674f0ea

--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
       <h1 class="title topictitle1">Documentation DataClean</h1>
       <nav>
          <ul class="map">
-            <li class="topicref"><a href="../concepts/about_dataclean.html">À propos de DataClean</a></li>
-            <li class="topicref"><a href="../concepts/use_cases.html">Cas d'utilisation</a></li>
+            <li class="topicref"><a href="../concepts/about_dataclean.html">../concepts/about_dataclean.dita</a></li>
+            <li class="topicref"><a href="../concepts/use_cases.html">../concepts/use_cases.dita</a></li>
             <li class="topicref topichead">Installation
                <ul>
-                  <li class="topicref"><a href="../tasks/install_windows.html">install_windows</a></li>
-                  <li class="topicref"><a href="../tasks/install_linux.html">Installer Linux</a></li>
+                  <li class="topicref"><a href="../tasks/install_windows.html">../tasks/install_windows.dita</a></li>
+                  <li class="topicref"><a href="../tasks/install_linux.html">../tasks/install_linux.dita</a></li>
                </ul>
             </li>
             <li class="topicref topichead">Utilisation
                <ul>
-                  <li class="topicref"><a href="../tasks/run_command.html">Exécuter la commande</a></li>
-                  <li class="topicref"><a href="../tasks/export_results.html">Exporter les résultats</a></li>
+                  <li class="topicref"><a href="../tasks/run_command.html">../tasks/run_command.dita</a></li>
+                  <li class="topicref"><a href="../tasks/export_results.html">../tasks/export_results.dita</a></li>
                </ul>
             </li>
             <li class="topicref topichead">Référence
                <ul>
-                  <li class="topicref"><a href="../references/commands.html">commands</a></li>
-                  <li class="topicref"><a href="../references/options.html">options</a></li>
-                  <li class="topicref"><a href="../references/error_codes.html">Erreurs</a></li>
+                  <li class="topicref"><a href="../references/commands.html">../references/commands.dita</a></li>
+                  <li class="topicref"><a href="../references/options.html">../references/options.dita</a></li>
+                  <li class="topicref"><a href="../references/error_codes.html">../references/error_codes.dita</a></li>
                </ul>
             </li>
          </ul>
