--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <title>Documentation DataClean</title>
       <link rel="stylesheet" type="text/css" href="css/commonltr.css">
       
-      <link rel="stylesheet" type="text/css" href="/css/common-extended.css">
+      <link rel="stylesheet" type="text/css" href="css/common-extended.css">
    </head>
    <body>
       <h1 class="title topictitle1">Documentation DataClean</h1>
@@ -37,5 +37,7 @@
             </li>
          </ul>
       </nav>
+     <script language="javascript" src="js/popovers.js"/>
+     <script language="javascript" src="js/dark-mode-toggler.js"/>
    </body>
 </html>
